# bioscreen

./: .gitignore  PCA.py  experiment_classes.py  main.py  pyproject.toml  setup.py
bioscreen/: PCA.py  __init__.py  counts.py  experiment_classes.py  utils.py  validations.py
src/bioscreen/: PCA.py  __init__.py  _imports.py  counts.py  experiment_classes.py  gene_ontology.py  geneset_enrichment.py  plotting.py  stringdb.py  tests.py  utils.py
src/bioscreen/classes/: base.py  comparison.py  counts.py  differential_gene_expression.py  experiment.py  geneset_cls.py  geneset_enrichment.py  results.py
src/bioscreen/rinterfaces/: limma.py  limmaFunctions.R  utils.py
