[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bioscreen"
version = "0.0.1"
dependencies = [
    "pandas",
    "attrdictionary @ git+https://github.com/kiselas/AttrDictionary.git@master",
    "attrs",
    'scikit-learn',

    #"rpy2"
]

[project.optional-dependencies]
R = ["rpy2"]
plotting = [
    "seaborn",
    "matplotlib",
]


[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
#include = ["pkg*"]  # alternatively: `exclude = ["additional*"]`